--- a/static/style.css
+++ b/static/style.css
@@ -15,9 +15,9 @@ strong, li {
   max-width: 1000px !important;
 }
 
-.text-left {
+.left {
   text-align: left;
-  margin: 0 auto;
+  margin: auto;
 }
 
 .text-center {
@@ -27,6 +27,10 @@ strong, li {
 
 .text-bold {
   font-weight: 600;
+}
+
+.text-18px {
+  font-size: 18px;
 }
 
 .center {
@@ -41,6 +45,7 @@ section {
 
 p {
   font-weight: 300;
+  font-size: 18px;
   font-family: "Hanken Grotesk", sans-serif;
   line-height: 1.5;
 }
