updated font sizes and reworked apply button

--- a/static/style.css
+++ b/static/style.css
@@ -2,13 +2,13 @@
 Common Styling
 */
 body {
-  font-family: "Hanken Grotesk", sans-serif;
+  font-family: 'Hanken Grotesk', sans-serif;
   letter-spacing: 0.3px;
   background: #445261;
 }
 
 * {
-  font-family: "Hanken Grotesk", sans-serif;
+  font-family: 'Hanken Grotesk', sans-serif;
 }
 
 .container {
@@ -46,7 +46,7 @@ section {
 p {
   font-weight: 300;
   font-size: 18px;
-  font-family: "Hanken Grotesk", sans-serif;
+  font-family: 'Hanken Grotesk', sans-serif;
   line-height: 1.5;
 }
 
@@ -63,20 +63,25 @@ p {
   font-size: 30px;
   margin-bottom: 25px;
   font-weight: 400;
-  font-family: "Hanken Grotesk", sans-serif;
+  font-family: 'Hanken Grotesk', sans-serif;
 }
 
 .text-title {
   font-size: 25px;
   margin-bottom: 25px;
   font-weight: 500;
-  font-family: "Hanken Grotesk", sans-serif;
+  font-family: 'Hanken Grotesk', sans-serif;
 }
+
 .project-detail-title {
   font-size: 30px;
   margin-bottom: 25px;
   font-weight: 550;
-  font-family: "Hanken Grotesk", sans-serif;
+  font-family: 'Hanken Grotesk', sans-serif;
+}
+
+.subtitle-text {
+  font-size: 20px;
 }
 
 .btn {
@@ -101,12 +106,12 @@ a {
 }
 
 h2 {
-  font-family: "Hanken Grotesk", sans-serif;
+  font-family: 'Hanken Grotesk', sans-serif;
   font-weight: 400;
 }
 
 h2.center {
-  font-family: "Hanken Grotesk", sans-serif;
+  font-family: 'Hanken Grotesk', sans-serif;
 }
 
 .gray-subsection {
@@ -133,7 +138,7 @@ h2.center {
 */
 #mainNav {
   background-color: #ffffff;
-  font-family: "Hanken Grotesk", sans-serif;
+  font-family: 'Hanken Grotesk', sans-serif;
 }
 
 #mainNav .navbar-toggler {
@@ -144,7 +149,7 @@ h2.center {
   color: #1f285f;
   border: 0;
   background-color: #bfe6ec;
-  font-family: "Hanken Grotesk", sans-serif;
+  font-family: 'Hanken Grotesk', sans-serif;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -153,7 +158,7 @@ h2.center {
   padding: 0.75em 0;
   letter-spacing: 1px;
   color: #1f285f;
-  font-family: "Hanken Grotesk", sans-serif;
+  font-family: 'Hanken Grotesk', sans-serif;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active,
@@ -248,14 +253,14 @@ h2.center {
 
 .blockquote-fancy:before {
   position: absolute;
-  content: "\201C";
+  content: '\201C';
   font-size: 40pt;
   font-family: Georgia, serif;
   color: #7a7a7a;
   margin: 1% 0 0 -7%;
 }
 .project-body-quote {
-  font-family: "Hanken Grotesk", sans-serif;
+  font-family: 'Hanken Grotesk', sans-serif;
 }
 
 .blockquote-fancy-cite {
@@ -274,7 +279,7 @@ h2.center {
 }
 
 .blockquote-footer {
-  font-family: "Hanken Grotesk", sans-serif;
+  font-family: 'Hanken Grotesk', sans-serif;
 }
 
 @media (max-width: 900px) {
